# META_HACKATHON

./: .dockerignore  .gitignore  Dockerfile  EXPLANATION.md  README.md  __init__.py  blog.md  hackathon_pitch.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  scratch_build.py  scratch_test.py  validate-submission.ps1  validate-submission.sh  validate.py
env/: __init__.py  dynamic_input.py  red_agent.py  schema_drift.py  soc_environment.py
graders/: __init__.py  easy_grader.py  hard_grader.py  medium_grader.py
outputs/: hf_blog_post.md  inference_results.json
outputs/evals/: scores.json
scripts/: smoke_test.py
server/: __init__.py  app.py
soc_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tasks/: __init__.py  easy_task.py  hard_task.py  medium_task.py
tests/: test_soc_environment.py
training/: __init__.py  colab_grpo_all_in_one.ipynb  colab_grpo_all_in_one.py  colab_notebook.py  colab_soc_grpo_unsloth_fixed.py  colab_unsloth_grpo.py  colab_unsloth_ppo.py  red_vs_blue_loop.py
